--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,13 @@ edition = "2018"
 strict = []
 
 [dependencies]
+k8s-openapi = { version = "0.11.0", default-features = false, features = ["v1_19"] }
+kube = { version = "0.52.0", default-features = false, features = ["rustls-tls"] }
+kube-runtime = { version = "0.52.0", default-features = false, features = ["rustls-tls"] }
+serde_json = "1.0.64"
+tokio = { version = "1.5.0", features = ["macros", "rt-multi-thread"] }
+tracing = "0.1.25"
+tracing-subscriber = "0.2.17"
 
 [profile.release]
 lto = true
