--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ edition = "2018"
 strict = []
 
 [dependencies]
+gumdrop = "0.8.0"
 k8s-openapi = { version = "0.11.0", default-features = false, features = ["v1_19"] }
 kube = { version = "0.52.0", default-features = false, features = ["rustls-tls"] }
 kube-runtime = { version = "0.52.0", default-features = false, features = ["rustls-tls"] }
