--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,8 @@
 # https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [package]
-name = "nirvana-rust"
-version = "0.0.0"
+name = "ingress-status-sync"
+version = "0.0.1"
 authors = ["John Simon <john@whatisaph.one>"]
 edition = "2018"
 
