--- a/deploy/Dockerfile
+++ b/deploy/Dockerfile
@@ -1,4 +1,4 @@
-FROM rust:1.51.0-slim-buster AS build
+FROM rust:1.51.0-alpine3.13 AS build
 
 WORKDIR /opt/build
 COPY Cargo.toml Cargo.lock ./
@@ -7,7 +7,7 @@ RUN cargo build --release
 
 ################################################################################
 
-FROM debian:buster-slim
+FROM alpine:3.13
 
 COPY --from=build /opt/build/target/release/ingress-status-sync /opt/ingress-status-sync
 
