--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,8 +12,8 @@ strict = []
 [dependencies]
 gumdrop = "0.8.0"
 k8s-openapi = { version = "0.11.0", default-features = false, features = ["v1_19"] }
-kube = { version = "0.52.0", default-features = false, features = ["rustls-tls"] }
-kube-runtime = { version = "0.52.0", default-features = false, features = ["rustls-tls"] }
+kube = { version = "0.52.0" }
+kube-runtime = { version = "0.52.0" }
 serde_json = "1.0.64"
 tokio = { version = "1.5.0", features = ["macros", "rt-multi-thread"] }
 tracing = "0.1.25"
